--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <p>In the meantime, you can subscribe to the YouTube channel. It’s empty for now, haha, but I promise to announce the release and post a video about the project soon. Hope you’ll enjoy it!</p>
       
-        <a href="#" class="cta-button">YouTube channel <br> (will be ready today)</a>
+        <a href="#" onclick="alert('The channel will be ready today ¯\_(ツ)_/¯')" class="cta-button">YouTube channel <br> (will be ready today)</a>
     </section>
 
     <footer>
