--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         
         header {
-            background-color: #ff6347;
+            background-color: #f59e42 ;
             padding: 20px;
         }
 
@@ -42,7 +42,7 @@
 
         h2 {
             font-size: 2rem;
-            color: #ff6347;
+            color: grey;
         }
 
         p {
