--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 </head>
 <body>
     <header>
-        <h1>2048 SPORT coming soon</h1>
+        <h1>2048 SPORT</h1>
     </header>
 
     <section>
         <h2>Fitness gamification or game fitnetization?</h2>
-        <p>Hi there! You’ll soon see the 2048 SPORT game here. It’s an active alternative to the classic 2048 game, using motion capture technology. The GIF below should give you a good idea of the gameplay. I’m almost finished with development and just need a few more days to finalize and deploy it. It’s hard not to play too much while testing :-)</p>
+        <p>Hey there! This is a prototype of a motion-based twist on the classic 2048 game, where you are the controller. All you need is a desktop or laptop with a webcam and a little space to play. The GIF below gives you a sneak peek at the gameplay</p>
       
       <img style="max-width:90%" src="2048sport.gif">
 
@@ -124,9 +124,10 @@
             <li>Simple movements suitable for all ages</li>
         </ul>
 
-      <p>In the meantime, you can subscribe to the YouTube channel. It’s empty for now, haha, but I promise to announce the release and post a video about the project soon. Hope you’ll enjoy it!</p>
+      <p>I’ve just launched the first prototype and would love for you to try it out. Give it a go, and let me know what you think – leave the comment under the <a href="https://www.youtube.com/@2048sport">POST</a></p>
+      <p>Thanks for supporting an indie dev and checking out my project!</p>
       
-        <a href="https://www.youtube.com/@2048sport" class="cta-button">YouTube channel <br> (Content is being cooked up!)</a>
+        <a href="play.html" class="cta-button">PLAY<br>(Use a PC or Mac, not a smartphone)</a>
     </section>
 
     <footer>
