--- a/play.html
+++ b/play.html
@@ -86,7 +86,7 @@ window.addEventListener('blur', timeCount.pause)
 
 let loading= ()=> {
   e= document.createElement('div')
-  e.innerHTML= 'LOADING<br><img src="loading.gif">'
+  e.innerHTML= 'LOADING<br><img src="loading.gif"><p style="font-size:20px">Use a PC or Mac, not a smartphone 📵</p>'
   e.style.position= 'absolute'
   e.style.fontSize= '100px'
   e.style.color= 'white'
