--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="2048Sport: Move, Play, Win! A fitness game that combines light exercise with the addictive fun of 2048. Control the game using real-world movements and stay active.">
     <meta name="keywords" content="2048, fitness game, computer vision, move to play, fitness gamification, active gaming, interactive gaming">
     <meta name="author" content="Your Name">
-    <title>2048 SPORT | Move, Play, Win!</title>
+    <title>2048 SPORT | Move!</title>
     <style>
         body {
             margin: 0;
@@ -124,8 +124,8 @@
             <li>Simple movements suitable for all ages</li>
         </ul>
 
-      <p>I’ve just launched the first prototype and would love for you to try it out. Give it a go, and let me know what you think – leave the comment under the <a href="https://www.youtube.com/@2048sport">POST</a></p>
-      <p>Thanks for supporting an indie dev and checking out my project!</p>
+      <p>I’ve just launched the first prototype and would love for you to try it out. Give it a go, and let me know what you think – leave a comment on the YouTube channel <a href="https://www.youtube.com/@2048sport">POST</a></p>
+      <p>Thanks!</p>
       
         <a href="play.html" class="cta-button">PLAY<br>(Use a PC or Mac, not a smartphone)</a>
     </section>
