--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="keywords" content="2048, fitness game, computer vision, move to play, fitness gamification, active gaming, interactive gaming">
     <meta name="author" content="Your Name">
     <title>2048 SPORT | Move!</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         body {
             margin: 0;
