--- a/play.html
+++ b/play.html
@@ -12,6 +12,13 @@
     <meta charset="UTF-8" />
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="2048Sport: Move, Play, Win! A fitness game that combines light exercise with the addictive fun of 2048. Control the game using real-world movements and stay active.">
+    <meta name="keywords" content="2048, fitness game, computer vision, move to play, fitness gamification, active gaming, interactive gaming">
+    <meta name="author" content="Your Name">
+    <title>2048 SPORT | Move!</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 
   <body style="padding:0;margin:0;background:#000;overflow:hidden">
