--- a/play.html
+++ b/play.html
@@ -236,7 +236,7 @@ let add2048= container=> {
 </div>`
     
   }
-  document.addEventListener('click', gameOver)
+  //document.addEventListener('click', gameOver)
     
   
   let shifted= false
