--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <p>I’ve just launched the first prototype and would love for you to try it out. Give it a go, and let me know what you think – leave a comment on the YouTube channel <a href="https://www.youtube.com/@2048sport">POST</a></p>
       <p>Thanks!</p>
       
-        <a href="play.html" class="cta-button">PLAY<br>(Use a PC or Mac, not a smartphone)</a>
+        <a href="#" class="cta-button">JUST BUTTON<br>(No action)</a>
     </section>
 
     <footer>
