--- a/flextest.html
+++ b/flextest.html
@@ -41,12 +41,13 @@
         -margin: 0 auto;
         font-family: Trebuchet MS, sans-serif
       }
-      .ratio2x3 {
+      .fixratio {
         background:#eee; 
         width:100%; 
         aspect-ratio: 8 / 14; 
         -margin:1%;
-        font-size: 4cqw
+        font-size: 4cqw;
+        border:1px dotted gray;
       }
       .wordbox {
         background:#eee;
@@ -79,8 +80,9 @@
 <body>
     <div class="background">
       <div class="gameel">
-        <div class="ratio2x3">HELLO WORLD</div>
-         <div class="wordbox">
+        <div class="fixratio" style="aspect-ratio:55/25;">HELLO WORLD</div>
+        <div class="fixratio" style="aspect-ratio:55/75;">HELLO WORLD</div>
+         <!-- <div class="wordbox">
           <div class="wordbox-title">WORDS</div>
           <div class="wordbubble">word</div>
           <div class="wordbubble">reload</div>
@@ -90,7 +92,7 @@
           <div class="wordbubble">background</div>
           <div class="wordbubble">wwidthord</div>
           <div class="wordbubble">oncontextmenu</div>
-         </div>
+         </div> -->
       </div>
     </div>
 </body>
