--- a/flextest.html
+++ b/flextest.html
@@ -44,10 +44,10 @@
       .fixratio {
         background:#eee; 
         width:100%; 
-        aspect-ratio: 8 / 14; 
+        -aspect-ratio: 8 / 14; 
         -margin:1%;
         font-size: 4cqw;
-        border:1px dotted gray;
+        border:1px dotted gray;     
       }
       .wordbox {
         background:#eee;
@@ -80,8 +80,8 @@
 <body>
     <div class="background">
       <div class="gameel">
-        <div class="fixratio" style="aspect-ratio:55/25;">HELLO WORLD</div>
-        <div class="fixratio" style="aspect-ratio:55/75;">HELLO WORLD</div>
+        <div class="fixratio" style="height:30cqh;">HELLO WORLD</div>
+        <div class="fixratio" style="height:70cqh;">HELLO WORLD</div>
          <!-- <div class="wordbox">
           <div class="wordbox-title">WORDS</div>
           <div class="wordbubble">word</div>
