--- a/flextest.html
+++ b/flextest.html
@@ -80,8 +80,8 @@
 <body>
     <div class="background">
       <div class="gameel">
-        <div class="fixratio" style="height:30cqw;">HELLO WORLD</div>
-        <div class="fixratio" style="height:70cqw;">HELLO WORLD</div>
+        <div class="fixratio" style="aspect-ratio:55/25;">HELLO WORLD</div>
+        <div class="fixratio" style="aspect-ratio:55/75;">HELLO WORLD</div>
          <!-- <div class="wordbox">
           <div class="wordbox-title">WORDS</div>
           <div class="wordbubble">word</div>
