--- a/flextest.html
+++ b/flextest.html
@@ -144,7 +144,7 @@
 
     // The cursor point, translated into svg coordinates
     var cursorpt =  pt.matrixTransform(svg.getScreenCTM().inverse());
-    console.log("(" + cursorpt.x + ", " + cursorpt.y + ")");
+    alert("(" + cursorpt.x + ", " + cursorpt.y + ")");
   }
 </script>
 <script>
