--- a/flextest.html
+++ b/flextest.html
@@ -103,37 +103,26 @@
     </style>
 </head>
 <body>
-    <div class="background">
-      <div class="gameel">
+  <div class="background">
+    <div class="gameel">
 
-        <!-- <div class="grid-container"> -->
-          <svg onpointerdown="alert_coords(event)" class="svg-overlay" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 120" preserveAspectRatio="none">
-            <line x1="5" y1="5" x2="85" y2="85" stroke-linecap="round" stroke="red" stroke-width="7"/>
-            <line x1="15" y1="5" x2="85" y2="75" stroke-linecap="round" stroke="green" stroke-width="7"/>
-          </svg>       
-          <!-- 9 x 12 = 108 grid items -->
-          <!-- <script>
-              for (let i = 0; i < 108; i++) {
-                  document.write('<div class="grid-item">'+i+'</div>');
-              }
-          </script> -->
-        <!-- </div> -->
-
-        <!-- <div class="fixratio" style="aspect-ratio:55/25;">HELLO WORLD</div> -->
-        <!-- <div class="fixratio" style="aspect-ratio:55/75;">HELLO WORLD</div> -->
-         <div class="wordbox">
-          <div class="wordbox-title">WORDS</div>
-          <div class="wordbubble">word</div>
-          <div class="wordbubble">reload</div>
-          <div class="wordbubble">word</div>
-          <div class="wordbubble">crossword</div>
-          <div class="wordbubble">word</div>
-          <div class="wordbubble">background</div>
-          <div class="wordbubble">wwidthord</div>
-          <div class="wordbubble">oncontextmenu</div>
-         </div>
+      <svg onpointerdown="alert_coords(event)" class="svg-overlay" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 120" preserveAspectRatio="none">
+        <line x1="5" y1="5" x2="85" y2="85" stroke-linecap="round" stroke="red" stroke-width="7"/>
+        <line x1="15" y1="5" x2="85" y2="75" stroke-linecap="round" stroke="green" stroke-width="7"/>
+      </svg>       
+      <div class="wordbox">
+        <div class="wordbox-title">WORDS</div>
+        <div class="wordbubble">word</div>
+        <div class="wordbubble">reload</div>
+        <div class="wordbubble">word</div>
+        <div class="wordbubble">crossword</div>
+        <div class="wordbubble">word</div>
+        <div class="wordbubble">background</div>
+        <div class="wordbubble">wwidthord</div>
+        <div class="wordbubble">oncontextmenu</div>
       </div>
     </div>
+  </div>
 </body>
 
 <script>
@@ -149,7 +138,7 @@
           textElement.setAttribute("y", y);
           textElement.setAttribute("font-size", "5");
           textElement.setAttribute("text-anchor", "middle");
-          textElement.setAttribute("alignment-baseline", "middle");
+          textElement.setAttribute("dominant-baseline", "middle");
           textElement.setAttribute("font-family", "Trebuchet MS, sans-serif");
           textElement.textContent = row * 9 + col + 1;
 
