--- a/flextest.html
+++ b/flextest.html
@@ -69,6 +69,9 @@
         border-radius: 1em;
         font-size: 3cqw;
       }
+      .wordbubble:nth-child(2) {
+        margin-left: 3em;
+      }
       .bubblebtn {
         background: #4ba3f5;
         padding:.3em .5em;
@@ -111,10 +114,10 @@
         background: rgba(92, 176, 255,.5);
       }
       .svg-overlay {
-          -position: absolute;
-          pointer-events: all;
-          width:100%;
-          -z-index: 0;
+        -position: absolute;
+        pointer-events: all;
+        width:100%;
+        -z-index: 0;
       }
       .grid-item {
           -z-index: 1;
@@ -138,7 +141,7 @@
       <div class="wordbox">
         <!-- <div class="wordbox-title">WORDS</div> -->
         <div class="bubblebtn">☰</div>
-        <div class="bubblebtnfake">☰</div>
+        <!-- <div class="bubblebtnfake">☰</div> -->
         <div class="wordbubble">WORD</div>
         <div class="wordbubble">RELOAD</div>
         <div class="wordbubble">WORD</div>
