--- a/flextest.html
+++ b/flextest.html
@@ -859,6 +859,6 @@ let service = ()=> {
   showPrompt()
 }
 let printhtml=()=>window.open().document.write('<xmp>'+document.body.innerHTML)
-document.oncontextmenu = e=> {e.preventDefault();location.reload()}
+//document.oncontextmenu = e=> {e.preventDefault();location.reload()}
 </script>
 </html>
